Update and build

--- a/layouts/header.ejs
+++ b/layouts/header.ejs
@@ -20,5 +20,6 @@
     </script>
 
     <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="https://docs.pulsar-edit.dev/main.css" />
 
   </head>
