--- a/blog/main.less
+++ b/blog/main.less
@@ -1,9 +1,2 @@
-@import 'skeleton-less/less/skeleton.less';
-@import 'less/skeleton-modifiers.less';
-@import 'less/mixins.less';
-@import 'less/themes.less';
-@import 'less/content.less';
-@import 'less/globals.less';
-@import 'less/index.less';
-@import 'less/page-header.less';
-@import 'less/skeleton-theming.less';
+@import "less/blocks.less";
+@import "less/header.less";
