--- a/layouts/home.ejs
+++ b/layouts/home.ejs
@@ -1,12 +1,12 @@
 <!-- Home page for the website -->
-<%-include("header")%>
+<%- include("header") %>
 
   <body class="layout--home">
     <%- include("page_header") %>
     <div class="content">
       <main class="container">
         <section class="header">
-          <h1 class="title" id="title"><%=title%></h1>
+          <h1 class="title" id="title"><%= title %></h1>
 
           <section class="header__description">
             <%- content %>
@@ -14,10 +14,10 @@
         </section>
 
 
-        <%-include("blocks", { blocks: collections["blog-posts"] })%>
+        <%- include("blocks", { blocks: locals.blocks ?? [] }) %>
 
       </main>
     </div>
   </body>
 
-<%-include("footer")%>
+<%- include("footer") %>
