--- a/layouts/header.ejs
+++ b/layouts/header.ejs
@@ -2,6 +2,7 @@
 <html lang="en" data-theme="">
   <head>
     <title><%=title%></title>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" id="meta-scheme" content="">
     <meta property="og:title" content="<%= title %>">
