--- a/layouts/header.ejs
+++ b/layouts/header.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en" data-theme="">
+  <% let title = locals?.customTitle ?? locals.title %>
   <head>
-    <title><%=title%></title>
+    <title><%= title %></title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" id="meta-scheme" content="">
