--- a/less/header.less
+++ b/less/header.less
@@ -3,7 +3,7 @@
     padding-bottom: 1.5rem;
     border-bottom: .5rem solid var(--thematic-break-color);
     margin-bottom: 3rem;
-    & > span {
+    & > * {
       margin-right: .5em;
     }
   }
