--- a/layouts/home.ejs
+++ b/layouts/home.ejs
@@ -4,6 +4,25 @@
   <body class="layout--home">
     <%- include("page_header") %>
     <div class="content">
+
+      <div class="sidebar">
+        <section class="sidebar__section sidebar__section--tags">
+          <header>
+            <h3>Tags</h3>
+          </header>
+          <div class="sidebar__section-content">
+            <ul class="tag-list">
+              <% for (let [tag, count] of collections.tags) { -%>
+              <li class="tag-list__item">
+                <a class="tag-list__item-link" href="/tag/<%= tag %>"><%= tag %></a>
+                <span class="tag-list__item-count">(<%= count %>)</span>
+              </li>
+              <% } -%>
+            </ul>
+          </div>
+        </section>
+      </div>
+
       <main class="container">
         <section class="header">
           <h1 class="title" id="title"><%= title %></h1>
