Add breadcrumbs-style link in sidebar of blog posts

--- a/layouts/post.ejs
+++ b/layouts/post.ejs
@@ -5,6 +5,11 @@
     <%- include("page_header") %>
     <div class="content">
       <section class="sidebar">
+        <div class="sidebar__contents">
+          <ul class="sidebar__breadcrumbs">
+            <li><a href="/">Home</a></li>
+          </ul>
+        </div>
         <div class="sidebar__toc"></div>
       </section>
 
