Add GitHub icon next to theme switcher

--- a/less/header.less
+++ b/less/header.less
@@ -8,3 +8,34 @@
     }
   }
 }
+
+.page-header {
+
+  &__items {
+    // Patches the CSS from the docs site
+    width: auto;
+    flex: 1 1;
+  }
+
+  &__actions {
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    align-items: flex-start;
+  }
+}
+
+.github-button {
+  & > a {
+    display: block;
+    line-height: 0;
+    color: inherit;
+    width: var(--theme-switcher-height) !important;
+    height: var(--theme-switcher-height) !important;
+
+    svg {
+      width: var(--theme-switcher-height) !important;
+      height: var(--theme-switcher-height) !important;
+    }
+  }
+}
