Fix line-height on blog post titles

--- a/less/blocks.less
+++ b/less/blocks.less
@@ -7,6 +7,10 @@
   border-bottom: .5rem solid var(--thematic-break-color);
   padding-bottom: 1.5rem;
 
+  &__header {
+    line-height: 2.5rem !important;
+  }
+
   &__details {
     font-size: 1.5rem;
 
