--- a/less/blocks.less
+++ b/less/blocks.less
@@ -8,7 +8,7 @@
   padding-bottom: 1.5rem;
 
   &__header {
-    line-height: 2.5rem !important;
+    line-height: 1.6 !important;
   }
 
   &__details {
