--- a/layouts/header.ejs
+++ b/layouts/header.ejs
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" id="meta-scheme" content="">
     <meta property="og:title" content="<%= title %>">
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="alternate" type="application/atom+xml" title="Atom 1.0" href="/feed.xml">
     <script type="text/javascript">
       {
