Fix HTML tags in code blocks

--- a/less/tags.less
+++ b/less/tags.less
@@ -53,7 +53,7 @@
 }
 
 .category,
-.tag {
+a.tag {
   font-weight: 500;
   transition-property: color, background-color, outline-color, border-color, text-shadow;
   transition-duration: 0.2s;
